--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(46, 46, 46);
+}
+
+/* assets/fonts.css */
+
+@font-face {
+  font-family: 'digital-7';
+  src: url('./assets/fonts/digital-7\ \(mono\ italic\).ttf') format('woff');
 }
 
 code {
