--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.App{
+  margin-top: 50px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+h2{
   color: white;
+  margin: 25px;
 }
 
-.App-link {
-  color: #61dafb;
+span{
+  color: red;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App h1{
+  text-align: center;
+  color: rgb(216, 0, 0);
+  margin-top: 35px;
+  font-size:80px;
+  font-family: 'digital-7';
 }
+
+.form-ajuste{
+  text-align: center;
+  align-items: center;
+}
+
+.form-ajuste input{
+  padding: 15px;
+  padding-right: 25px;
+  width: 15%;
+  border-radius: 6px;
+  border: none;
+  margin: 5px;
+}
+
+.App .form-ajuste button{
+  padding: 15px;
+  background-color: red;
+  color: white;
+  cursor: pointer;
+  border-radius: 6px;
+  width: 15%;
+  font-weight: bolder;
+  font-size: 16px;
+  border: none;
+  margin-left: 5px;
+}
+
+.App .form-ajuste button:hover{
+  transition: 0.3s;
+  background-color: rgb(202, 2, 2);
+}
+
+
