--- a/src/App.css
+++ b/src/App.css
@@ -59,4 +59,19 @@ span{
   background-color: rgb(202, 2, 2);
 }
 
+@media (max-width: 768px) {
+  .form-ajuste {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
+  .form-ajuste input{
+    width: 75%;
+  }
+
+  .form-ajuste button{
+    width: 100%;
+    margin-top: 15px;
+  }
+}
